--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8"/>
     <title>Madsportslab NBA</title>   
-    <link href="font-awesome/font-awesome.min.css" rel="stylesheet"/>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/assets/font-awesome/font-awesome.min.css" rel="stylesheet"/>
+    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/madsportslab.css" rel="stylesheet"/>
-    <script src="octokit/octokit-rest.min.js"></script>
+    <script src="/assets/octokit/octokit-rest.min.js"></script>
     <script src="https://unpkg.com/marked@0.5.2/lib/marked.js"></script>
     <script src="js/westside.js"></script>
   </head>
