--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Madsportslab NBA</title>   
     <link href="/assets/font-awesome/font-awesome.min.css" rel="stylesheet"/>
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="css/madsportslab.css" rel="stylesheet"/>
+    <link href="/assets/css/madsportslab.css" rel="stylesheet"/>
     <script src="/assets/octokit/octokit-rest.min.js"></script>
     <script src="https://unpkg.com/marked@0.5.2/lib/marked.js"></script>
-    <script src="js/westside.js"></script>
+    <script src="/assets/js/westside.js"></script>
   </head>
   <body>
     <main class="container" id="root">
