--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <main class="container" id="root">
-      <div class="jumbotron light-blue-bg white">
+      <div class="jumbotron bluebg white">
         <h1>Madsportslab NBA</h1>
       </div>
     </main>
