remove bootstrap and font-awesome files, use cdn

--- a/westside.html
+++ b/westside.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8"/>
     <title>Westside dashboard</title>   
-    <link href="/assets/font-awesome/css/all.css" rel="stylesheet"/>
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet"/>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/assets/css/westside.css" rel="stylesheet"/>
     <script src="/assets/octokit/octokit-rest.min.js"></script>
     <script src="https://unpkg.com/marked@0.5.2/lib/marked.js"></script>
