make the title a link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <main class="container" id="root">
       <div class="jumbotron bluebg white">
-        <h1>Madsportslab NBA</h1>
+        <h1><a href="https://madsportslab.github.io">Madsportslab NBA</a></h1>
       </div>
     </main>
     <br>
