--- a/westside.html
+++ b/westside.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <br>
-    <main class="container" id="dashboard">
+    <main class="container d-none" id="dashboard">
       <div class="row">
         <div class="col-lg-12">
           <h2 class="teal" id="articleCount">Articles</h2>
@@ -41,7 +41,7 @@
         </div>
       </div>
     </main>
-    <main class="container d-none" id="getstarted">
+    <main class="container" id="getstarted">
       <h1 class="teal">Get started</h1>
       <h5 class="text-muted">Signin to your Github account to get started.</h5>
       <a class="btn btn-primary btn-lg" href="https://github.com/login/oauth/authorize?client_id=64b4ea6f4bbefad8bc2a">Signin Github</a>
